fix ham nav on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -210,6 +210,7 @@ img {
 }
 
 .ham-elements-container {
+  position: sticky;
   background-color: #1a1a1a;
 }
 
